--- a/clock.html
+++ b/clock.html
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <style>
-            body{
-                background-color: black;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 100vh;
-                margin : 0;
-            }
-            #demo
-            {
-                font-size: 64px;
-                color: cyan;
-             font-family: 'Courier New', Courier, monospace;
-                text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00, 0 0 40px rgba(0, 255, 0, 0.5);
-            }
-        </style>
-    </head>
-    <body>
-         <p id="demo"></p>
-         <script>
-            function updateClock()
-            {
-                var now = new Date();
-                var hours = now.getHours().toString().padStart(2,'0');
-                var minutes = now.getMinutes().toString().padStart(2,'0');
-                var seconds = now.getSeconds().toString().padStart(2,'0');
-                document.getElementById('demo').innerHTML = timeString;
-                setTimeout(updateClock,1000)
-            }
+<head>
+<style>
+  /* Style for the neon digital clock */
+  body {
+    background-color: #000; /* Black background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  #demo {
+    font-size: 64px;
+    color: #00ff00; /* Neon green color */
+    text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00, 0 0 40px rgba(0, 255, 0, 0.5);
+    font-family: 'Arial', sans-serif;
+  }
+</style>
+</head>
+<body>
 
-            updateClock();
-         </script>
-    </body>
+<p id="demo"></p>
+
+<script>
+function updateClock() {
+  var now = new Date();
+  var hours = now.getHours().toString().padStart(2, '0');
+  var minutes = now.getMinutes().toString().padStart(2, '0');
+  var seconds = now.getSeconds().toString().padStart(2, '0');
+  var timeString = hours + ":" + minutes + ":" + seconds;
+
+  document.getElementById('demo').innerHTML = timeString;
+  setTimeout(updateClock, 1000); // Update every second
+}
+
+// Initial call to set up the clock
+updateClock();
+</script>
+
+</body>
 </html>
